# altium_cruncher

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
contracts/: README.md  command_manifest.v0.json  interface_design_manifest.v0.json
docs/adrs/: ADR-0001-versioning-tagging-release-policy.md  ADR-0002-cli-install-and-dependency-discipline.md  ADR-0003-test-support-helper-location.md  ADR-0004-documentation-lifecycle-and-release-boundary.md  ADR-0005-design-doc-and-test-ownership-signoff.md  README.md
docs/contracts/: README.md  bom_pnp_config.v1.schema.json  clean_config.v1.schema.json  command_manifest.v0.json  interface_design_manifest.v0.json  pcb_layer_step_config.v2.schema.json  pcb_svg_config.a0.schema.json
docs/design/: README.md  command-inventory.md  dependency-audit.md  index.html  quality-signoff-status.md  test-assets.html  wn-hw-installer-integration.md
docs/design/api/: bom-pnp-interfaces.html  clean-interfaces.html  debug-plate-automation-interfaces.html  easyeda-interfaces.html  index.html  output-path-templates.html  pcb-interfaces.html  pcblib-clean-interfaces.html  version-interface.html
docs/design/cli/: bom.html  clean.html  debug-plate-mate-config.html  debug-plate.html  design.html  easyeda-footprint-review.html  easyeda-import.html  easyeda-review.html  extract.html  index.html  jlc.html  json-dump.html  mco.html  megamaid.html  merge.html  netlist.html  pcb-layer-step.html  pcb-svg.html  pcblib-footprint-3d.html  pnp.html  sch-svg.html  split.html  svg.html  version.html
docs/plans/: EASYEDA_MONKEY_PUBLIC_REPO_PLAN.md  PUBLIC_REPO_MIGRATION_PLAN.md  README.md  WN_HW_INSTALLER_INTEGRATION.md
docs/releases/: 2026-05-28.md
examples/: README.md
examples/debug-plate/: README.md
examples/debug-plate/cricket-node/: .gitignore  README.md  debug-plate.jsonc  debug-plate.mate.a0.jsonc  expected-operations.md
scripts/: install-altium-cruncher.ps1  install_smoke.py  py_signoff.py  py_signoff_baseline.json
src/py/altium_cruncher/: __init__.py  __main__.py  _cli.py  _version.py  altium_clean.py  altium_cruncher_cmd_bom.py  altium_cruncher_cmd_clean.py  altium_cruncher_cmd_debug_plate.py  altium_cruncher_cmd_design.py  altium_cruncher_cmd_easyeda_footprint_review.py  altium_cruncher_cmd_easyeda_import.py  altium_cruncher_cmd_easyeda_review.py  altium_cruncher_cmd_extract.py  altium_cruncher_cmd_jlc.py  altium_cruncher_cmd_json_dump.py  altium_cruncher_cmd_mco.py  altium_cruncher_cmd_megamaid.py  altium_cruncher_cmd_merge.py  altium_cruncher_cmd_pnp.py  (+42 more)
tests/: rack.toml  test_bom_outputs.py  test_bom_pnp_model.py  test_command_manifest.py  test_debug_plate.py  test_easyeda_import_footprint.py  test_easyeda_import_schematic.py  test_geometer_assembly_projection.py  test_json_dump.py  test_logging_utils.py  test_mco.py  test_pcb_layer_step.py  test_pcb_svg_cutout_layer.py  test_pcb_svg_view_selection.py  test_pcblib_clean_config.py  test_pnp_outputs.py  test_release_signoff.py  test_sch_svg_display_modes.py  test_schlib_clean_order.py  test_svg_hatch_patterns.py
tests/L0_public_cli/: STRATUM.toml  test_L0_001_cli_entrypoint.py  test_L0_001_cli_smoke.py  test_L0_002_output_path_templates.py
tests/L3_public_workflows/: STRATUM.toml  test_L3_001_public_cli_workflows.py  test_L3_002_pcb_layer_step_workflow.py  test_L3_003_megamaid_workflow.py  test_L3_004_bom_pnp_oracle_workflows.py
tests/L99_signoff/: STRATUM.toml  test_L99_001_release_signoff.py  test_L99_002_design_docs.py  test_L99_004_interface_design_docs.py  test_L99_005_config_contracts.py
tests/support_scripts/: install_test.py  py_signoff.py  py_signoff_baseline.json
(+222 files in other folders)
