[project]
name = "altium-cruncher"
version = "2026.5.25"
description = "Cross-platform Altium CLI utilities built on public altium-monkey"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Wavenumber LLC" },
]
dependencies = [
    "altium-monkey>=2026.5.25",
    "colorama>=0.4.6",
    "wn-geometer==2026.5.25",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "wn-rack>=1.1.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "twine>=5.0.0",
    "build>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "wn-rack>=1.1.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "twine>=5.0.0",
    "build>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/wavenumber-eng/altium_cruncher"
Repository = "https://github.com/wavenumber-eng/altium_cruncher"
Issues = "https://github.com/wavenumber-eng/altium_cruncher/issues"

[project.scripts]
altium-cruncher = "altium_cruncher._cli:main"
altium_cruncher = "altium_cruncher._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/py/altium_cruncher/**",
    "scripts/py_signoff.py",
    "scripts/py_signoff_baseline.json",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "docs/**",
    "contracts/**",
    "examples/**",
    "tests/**",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/py/altium_cruncher"]

[tool.hatch.version]
path = "src/py/altium_cruncher/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/py"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: long-running tests",
    "easyeda: tests requiring side-installed easyeda-monkey",
]
